--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.20.0",
     "lodash.get": "^4.4.2",
     "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-inlinesvg": "^2.1.0",
     "react-redux": "^7.2.1",
@@ -32,7 +33,8 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "IE 11"
     ],
     "development": [
       "last 1 chrome version",
