--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "enzyme-adapter-react-16": "^1.15.4",
     "jest-enzyme": "^7.1.2",
     "lodash.get": "^4.4.2",
+    "moxios": "^0.4.0",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
@@ -20,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-test-renderer": "^16.13.1",
+    "redux-mock-store": "^1.5.4",
     "styled-components": "^5.2.0",
     "styled-media-query": "^2.1.2"
   },
